0.3.0 ()
=====
* Added experimental HTTP capabilities:
  - Use any PUT, POST or SOURCE verb
  - Use chunked transfer for HTTP 1.1
* Added HTTP Host: header.

0.2.2 (04-10-2011)
=====
* Add second timeout parameters for connection attempts.
* New optional charset parameter for ICY metadata updates.
* Added new functions [string_of_protocol] and 
  [string_of_connection]

0.2.1 (2011-08-04)
=====
* Implemented a proper connection
  timeout mechanism.

0.2.0 (2011-06-26)
=====
* Added an exception parameters
  to propagate original exceptions
  when raising an internal's exception.
* Fixed exception handling in ICY's answer
  parsing.
* Remove buggy timeout option.

0.1.5 (2010-09-06)
=====
* Icy connection was broken
  with previous release, fixed..

0.1.4 (2010-09-06)
=====
* Fixed http headers generation.
  Before,ocaml-cry was sending
  one extra \r\n before starting sending
  the stream..

0.1.3 (2010-08-19)
=====
* Use recursive calls to Unix.write
  everywhere and make it safer.

0.1.2 (2010-02-08)
=====
* Fix the sending code: older versions resulted in a high load and
  in some cases in loss of stream chunks.
* Added manual_update_metadata to update metadata on any source without
  being necessarily connected/streaming on it.

0.1.1 (2009-10-26)
=====
* Fixed ICY source connection; send headers only after receiving "OK2".
* Fixed error: Scanf may raise other exceptions, catching any of them now.

0.1.0 (2009-10-12)
=====
* Initial release